# nith

./: CMakeLists.txt  CMakeSettings.json  README.md
assets/shaders/: basic_material.frag  basic_material.vert  cube.frag  cube.vert
src/: application.cpp  application.hpp  common.cpp  common.hpp  debug_object.hpp  event.hpp  log.cpp  log.hpp  nith_client_main.cpp  nithpch.hpp  object.hpp  registry.hpp  window.cpp  window.hpp  window_event.hpp
src/client/: application.cpp  application.hpp  camera.cpp  camera.hpp  camera_controller.cpp  camera_controller.hpp  nith_client_main.cpp  perspective_camera.cpp  perspective_camera.hpp  window.cpp  window.hpp  window_event.cpp  window_event.hpp
src/client/gl/: buffer.cpp  buffer.hpp  shader.cpp  shader.hpp  vertex_array.cpp  vertex_array.hpp
src/client/io/: input.cpp  input.hpp  input_event.cpp  input_event.hpp
src/client/renderer/: perspective_camera.cpp  perspective_camera.hpp
src/components/: camera.hpp  cube.hpp  cube_renderer.hpp  renderable3D.hpp  transform.hpp
src/components/debug/: transform_debug.hpp
src/gl/: buffer.cpp  shader.cpp  shader.hpp  vertex_array.cpp  vertex_array.hpp
src/io/: input.cpp  input.hpp  input_defs.hpp  input_event.hpp
src/loaders/: shader_loader.cpp  shader_loader.hpp
src/renderer/: cube_mesh.cpp  cube_mesh.hpp  mesh.cpp  mesh.hpp
src/systems/: camera_system.cpp  camera_system.hpp  cube_system.cpp  cube_system.hpp  debug_system.cpp  debug_system.hpp
src/util/: file_util.cpp  file_util.hpp
